--- a/parts/res/xml/hbm_settings.xml
+++ b/parts/res/xml/hbm_settings.xml
@@ -29,12 +29,14 @@
         <SwitchPreference
             android:key="auto_hbm"
             android:title="@string/auto_hbm_title"
-            android:summary="@string/auto_hbm_summary" />
+            android:summary="@string/auto_hbm_summary"
+            android:defaultValue="true"/>
 
         <org.lineageos.settings.hbm.AutoHBMThresholdPreference
             android:key="auto_hbm_threshold"
             android:title="@string/auto_hbm_threshold_title"
-            android:summary="@string/auto_hbm_threshold_summary" />
+            android:summary="@string/auto_hbm_threshold_summary"
+            android:defaultValue="19000"/>
 
         <Preference
             android:icon="@drawable/ic_info_outline"
